--- a/tls/CMakeLists.txt
+++ b/tls/CMakeLists.txt
@@ -52,8 +52,8 @@ if (BUILD_SHARED_LIBS)
 endif()
 
 if(ENABLE_LIBRESSL_INSTALL)
-	install(
-		TARGETS tls
+	install(TARGETS tls
+		EXPORT tls
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
