--- a/crypto/CMakeLists.txt
+++ b/crypto/CMakeLists.txt
@@ -826,8 +826,8 @@ if (BUILD_SHARED_LIBS)
 endif()
 
 if(ENABLE_LIBRESSL_INSTALL)
-	install(
-		TARGETS crypto
+	install(TARGETS crypto
+		EXPORT crypto
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
