--- a/ssl/CMakeLists.txt
+++ b/ssl/CMakeLists.txt
@@ -63,8 +63,8 @@ if (BUILD_SHARED_LIBS)
 endif()
 
 if(ENABLE_LIBRESSL_INSTALL)
-	install(
-		TARGETS ssl
+	install(TARGETS ssl
+		EXPORT ssl
 		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
