--- a/ssl/CMakeLists.txt
+++ b/ssl/CMakeLists.txt
@@ -69,4 +69,8 @@ if(ENABLE_LIBRESSL_INSTALL)
 		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 	)
+
+    # Create the .cmake to import the library target into an external project.
+    # Output path: ${CMAKE_INSTALL_PREFIX}/cmake
+    install(EXPORT ssl DESTINATION cmake)
 endif(ENABLE_LIBRESSL_INSTALL)
