--- a/ssl/CMakeLists.txt
+++ b/ssl/CMakeLists.txt
@@ -47,7 +47,7 @@ target_include_directories(ssl
 		.
 		../include/compat
 	PUBLIC
-		$<BUILD_INTERFACE:../include>
+		$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
   		$<INSTALL_INTERFACE:include>
 	)
 
